    - determine dynamic type of C++ classes
    - demangle D symbol names
    - regression: use of registers in expression was lost at some point
    - show class and message for exceptions that the debugger breaks on
    - fix conditional breakpoints "not supported"
    - support multiple "live ranges" when LDC uses registers for locals
    - fix evaluating locals in registers
  * slightly change identification of break point locations
  * fixed "go to definition" eventually not jumping to correct line after opening document
  * scale dialogs according to current text font size, i.e. adapt to DPI scaling

2019-09-03 Version 0.50.1
  * msbuild: fix parallel build in VS 2019 16.1
  * msbuild: fix building right after full installation
  * bugzilla 20003: project properties: show "Better C" in option text
  * bugzilla 20004: add button to reset all global settings to their default
  * bugzilla 20005: try to detect VC through ISetupConfiguration, too
  * mago: improve function call in watch window
    - implement virtual functions, fix calling delegates and function pointers
    - display of delegate type
    - support arbitrary return types
    - fix showing UTF32 values (supported by dmd 2.089)
    - fix reading enum values (not emitted before dmd 2.089)
  * VC project: release configurations in new projects now default to -release -O -inline
  * VC project: Compile and Compile/Run/Debug/Disassemble didn't use all command line options,
    Run/Debug now use "dmd -i" instead of "rdmd"
  * version highlighting for source files not in a project now reads settings from startup project
  * highlight x64 registers in asm block
  * don't highlight asm keywords/mnemonics/registers from semantic information
  * VS 2019 16.2: command line options no longer read correctly from the VC project for
    Compile and Run/Debug/Disassemble, dbuild refactored to not rely on msbuild DLLs for that

unreleased Version 0.51.0
  * Ctrl+Click goto definition added for VS2017+