@@ -89,6 +89,7 @@ public:
 	//                                           if start==end, mouse hovers without selection
 	// flags:      1 - try to evaluate constants/expressions
 	// flags:      2 - quote code for highlighting
+	// flags:      4 - return all overloads (rather than the current best match)
 	//
 	// it is assumed that the semantic analysis is forwarded to some other thread
 	// and that the status can be polled by GetTipResult
