@@ -1667,15 +1667,23 @@ else
 				return S_FALSE;
 			goto stepUp;
 		}
-
+version(none)
+{
 		span.iStartIndex = idx;
 		span.iStartLine = line;
-		span.iEndIndex = idx + 1;
-		span.iEndLine = line;
+}
+else
+{
+		// use caret after opening parenthesis
+		span.iStartIndex = otherIndex + 1;
+		span.iStartLine = otherLine;
+}
+		span.iEndIndex = span.iStartIndex + 1;
+		span.iEndLine = span.iStartLine;
 
 		mPendingMethodTipWord = word;
 		mPendingMethodTipComma = cntComma;
-		mPendingRequest = Package.GetLanguageService().GetTip(mCodeWinMgr.mSource, &span, &OnGetMethodTipText);
+		mPendingRequest = Package.GetLanguageService().GetTip(mCodeWinMgr.mSource, &span, true, &OnGetMethodTipText);
 		return S_OK;
 	}
 
@@ -1692,7 +1700,7 @@ else
 			foreach(fn; funcs)
 			{
 				Definition def;
-				def.name = mPendingMethodTipWord;
+				def.name = ""; // name is already in the type, was mPendingMethodTipWord;
 				int pos = fn.indexOf("\n");
 				if(pos >= 0)
 				{
@@ -1835,7 +1843,7 @@ version(none) // quick info tooltips not good enough yet
 				if(mPendingSpan != span)
 				{
 					mPendingSpan = span;
-					mPendingRequest = Package.GetLanguageService().GetTip(src, &span, &OnGetTipText);
+					mPendingRequest = Package.GetLanguageService().GetTip(src, &span, false, &OnGetTipText);
 				}
 				return E_PENDING;
 			}
