@@ -1177,3 +1177,14 @@ Version history
 
 unreleased Version 0.51.0
   * Ctrl+Click goto definition added for VS2017+
+  * experimental: semantic server built from dmd frontend
+  * VS2017+: syntax highlighted tool tips
+  * mago:
+    - new option "hide reference pointers"
+	- new option: "remove leading zeroes from hex values"
+	- fix crash expanding pointer to empty dynamic array
+	- large arrays: show growing index, fix omitting last element
+  * dparser: now creates server process per Visual Studio Instance
+  * added option to not show error squiggles and markers
+  * added tooltip to collapsed region
+  * fix function signature tool tips
